xeto: significant refactoring to add CNamespace to enable compile time choice validation
- add new CNamespace to encapsulate both static and compile-time namespace
- add new CSpec.cslotsWhile
- rework MChoice to work off CNamespace and CSpec so it can be used at compile time

--- a/src/test/testXeto/tests/compileErrs.yaml
+++ b/src/test/testXeto/tests/compileErrs.yaml
@@ -279,7 +279,7 @@ compileLib: |
   @b: Car {red}
   @c: Car {red,blue}
 verifyErrs: |
-  Instance '@a' missing required choice 'temp::Color'
-  Instance '@c' has conflicting choice 'temp::Color': 'Red', 'Blue'
+  Instance missing required choice 'temp::Car.color'
+  Instance has conflicting choice 'temp::Car.color': Red, Blue
 ---
 
