xeto: add Spec.isRef, isMultiRef flags; tweak gen-ph to handle systemRef specially

--- a/src/test/testXeto/tests/sys.yaml
+++ b/src/test/testXeto/tests/sys.yaml
@@ -108,7 +108,7 @@ verifyType:
   name: "Ref"
   base: "sys::Scalar"
   meta:
-    doc: "sys::Str Reference to another dict."
+    doc: "sys::Str Reference to another dict.  The 'of' meta defines target type"
     pattern: "sys::Str [a-zA-Z\\d\\._~]*"
     sealed: "sys::Marker"
     val: "sys::Ref x"
