xeto: fix list slots to infer the item type in instances

--- a/src/test/testXeto/tests/jsonAst.yaml
+++ b/src/test/testXeto/tests/jsonAst.yaml
@@ -22,7 +22,8 @@ verifyJsonAst: |
       "doc": "Test lib",
       "depends": [
         {
-          "lib": "sys"
+          "lib": "sys",
+          "spec": "sys::LibDepend"
         }
       ]
     },
@@ -64,10 +65,12 @@ verifyJsonAst: |
       "doc": "Test lib",
       "depends": [
         {
-          "lib": "sys"
+          "lib": "sys",
+          "spec": "sys::LibDepend"
         },
         {
-          "lib": "ph"
+          "lib": "ph",
+          "spec": "sys::LibDepend"
         }
       ]
     },
