--- a/src/test/testXeto/tests/compileErrs.yaml
+++ b/src/test/testXeto/tests/compileErrs.yaml
@@ -335,10 +335,15 @@ compileLib: |
     b: Str <fixed> "Boo"
   }
 
+  Baz: Foo {
+    c: Str "no way"
+  }
+
   @ok: Foo { a:"alpha", b:"beta", c:"C" }
   @errC: Foo { a:"alpha", b:"beta", c:"charlie" }
   @errB: Bar { a:"alpha", b:"beta", c:"C" }
 verifyErrs: |
+  Slot 'c' is fixed and cannot declare new default value
   Slot 'c': Must have fixed value 'C'
   Slot 'b': Must have fixed value 'Boo'
 
