xeto: more tweaks to get tests passing with LibDepend dict

--- a/src/test/testXeto/tests/jsonAst.yaml
+++ b/src/test/testXeto/tests/jsonAst.yaml
@@ -23,6 +23,7 @@ verifyJsonAst: |
       "depends": [
         {
           "lib": "sys",
+          "versions": "x.x.x",
           "spec": "sys::LibDepend"
         }
       ]
@@ -66,10 +67,12 @@ verifyJsonAst: |
       "depends": [
         {
           "lib": "sys",
+          "versions": "x.x.x",
           "spec": "sys::LibDepend"
         },
         {
           "lib": "ph",
+          "versions": "x.x.x",
           "spec": "sys::LibDepend"
         }
       ]
