convert4: beef up convert4 ext to gen funcs and provide more fine grained options

--- a/etc/convert4/config.props
+++ b/etc/convert4/config.props
@@ -5,7 +5,7 @@
 // prefix to add to turn old def lib/ext names into xeto lib names
 libPrefix=hx
 
-// ignore list of old def lib names
+// ignore list of old ext names
 ignore=axon,hx
 
 // depend versions by lib prefix
