haystack: prefer Etc.dict0 over Etc.emptyDict

--- a/src/tool/hxTools/lib/stub/connDispatch.fan.template
+++ b/src/tool/hxTools/lib/stub/connDispatch.fan.template
@@ -48,6 +48,7 @@ class {{typePrefix}}Dispatch : ConnDispatch
   override Dict onPing()
   {
     // ping the device and return a Dict with meta data for the conn rec
-    return Etc.emptyDict
+    return Etc.dict0
   }
 }
+
